--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "typescript": "~5.6.2",
     "inversify": "~6.0.2",
-    "reflect-metadata": "~0.2.2"
+    "reflect-metadata": "~0.2.2",
+    "vitest": "~2.1.1",
+    "faker": "~6.6.6",
+    "@faker-js/faker": "~9.0.3"
   }
 }
