--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc"
+    "build": "npx rimraf .\\dist\\ && tsc --experimentalDecorators true && npx tsc-alias && npx copyfiles package.json dist/"
   },
   "keywords": [],
   "author": "Diyar Khalaf",
