--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@fewo-monorepo/wrapper",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npx rimraf .\\dist\\ && tsc --experimentalDecorators true && npx tsc-alias && npx copyfiles package.json dist/"
@@ -18,6 +18,10 @@
     "faker": "~6.6.6",
     "@faker-js/faker": "~9.0.3",
     "tsc-alias": "~1.8.10",
-    "rimraf": "~6.0.1"
+    "rimraf": "~6.0.1",
+    "ts-loader": "~9.5.1",
+    "ts-node": "~10.9.2",
+    "@types/node": "~22.7.4",
+    "webpack": "~5.95.0"
   }
 }
